# my-portifolio

./: README.md  package-lock.json  package.json
backend/: .env  .gitignore  Dockerfile  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 203600340ff5_fix_sync_models_and_security.py  2077389e30db_create_real_tables.py  27bc089a1c3d_add_technology_tables_and_security.py  481260cf0d09_add_contact_table_and_update_post_schema.py  487afeccb21a_create_blog_posts_table.py  53d17ef5852e_create_posts_table.py  55cc2608960b_fix_remove_duplicate_timestamps_and_.py  63808533a539_initial_migration_portfolio_and_resume_.py  84c7aa4c6ac3_add_technologies_column.py  8628736567d4_add_technologies_column1.py  8cd6b7c02c86_add_technology_table_and_routes.py  936f5b8b65e3_sync_database_structure.py  e61590663ebc_reset_sync.py  e61803c24dbe_add_metadata_fields_to_posts.py  fd7bdf166aea_feat_create_blog_posts_table.py
backend/app/: main.py
backend/app/core/: gerar_hash.py  security.py
backend/app/db/: database.py
backend/app/models/: __init__.py  base.py  blog.py  contact.py  portfolio.py  resume.py
backend/app/routers/: auth.py  blog.py  contact.py  portfolio.py  technologies.py
backend/app/schemas/: base.py  contact.py  post.py  project.py  skill.py  technology.py
backend/app/services/: ai_generator.py  blog.py  portfolio.py  technology.py
frontend/portifolio/: .env  .gitignore  .prettierrc  index.html  package-lock.json  package.json  tailwind.config.js
frontend/portifolio/src/: App.jsx  index.css
(+60 files in other folders)
